--- a/MasGlobal.Employees.Web/Views/Employee/Index.cshtml
+++ b/MasGlobal.Employees.Web/Views/Employee/Index.cshtml
@@ -27,6 +27,10 @@
 <table id="tableListEmployees" class="table table-striped table-bordered">
 </table>
 
+<div id='loadingmessage' style='display:none'>
+    <img src='img/ajax-loader.gif' />
+</div>
+
 @section scripts {
     @Scripts.Render("~/bundles/employee")
 }
